--- a/src/main/resources/templates/Success.html
+++ b/src/main/resources/templates/Success.html
@@ -5,5 +5,9 @@
 </head>
 <body>
 Booking Successful!!!!!!!!!!!!!!!
+
+<div id="totalAmount" th:text="'Pay The Amount:'+${TotalCost}"></div>
+<div id="bookingId" th:text="'Your Booking Id:'+${BookingID}"></div>
+
 </body>
 </html>
